# AI_CONTEST

./: README.md
camera_info_interceptor/: CMakeLists.txt  package.xml
camera_info_interceptor/include/camera_info_interceptor/: camera_info_interceptor_node.hpp
camera_info_interceptor/launch/: camera_info_interceptor.launch.py
camera_info_interceptor/src/: camera_info_interceptor_component.cpp  camera_info_interceptor_node.cpp
depth_handler/: CMakeLists.txt  README.md  package.xml
depth_handler/include/depth_handler/: cluster.hpp  depth_processor_node.hpp
depth_handler/msg/: Bbox3d.msg  Bbox3dArray.msg
depth_handler/src/: depth_processor_node.cpp
detector/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
detector/include/detector/: detector_node.hpp  lw_detr.hpp  yolov8.hpp
detector/msg/: Armor.msg  Bbox2d.msg  Bbox2dArray.msg  Car.msg  Cars.msg
detector/src/: detector_node.cpp  lw_detr.cpp  yolov8.cpp
detector_wjr/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
detector_wjr/include/detector/: detector_node.hpp  lw_detr.hpp  yolov8.hpp
detector_wjr/include/detector_wjr/: detector_node_wjr.hpp  lw_detr.hpp  yolov8.hpp
detector_wjr/src/: detector_node.cpp  lw_detr.cpp  yolov8.cpp
dualarm/: CMakeLists.txt  README_ServiceTemplate_Refactoring.md  package.xml
dualarm/config/: config.yaml
dualarm/include/dualarm/: README_Kalman.md  headers.hpp  kalman.h  kalman_adaptive_test  kalman_adaptive_test.cpp  kalman_example.cpp  kalman_real_test  kalman_real_test.cpp  kalman_test  kalman_usage_example.cpp  service_server_template.hpp  usage_test
dualarm/launch/: robot_main.launch.py
dualarm/scripts/: demo_service_template.sh
dualarm/src/: kalman.cpp  main.cpp  main.h  main_refactored.cpp
epg50_gripper_ros/: CMakeLists.txt  README.md  SCAN_TOOL_README.md  package.xml
epg50_gripper_ros/include/serial/: serial.hpp
epg50_gripper_ros/launch/: launch.py
epg50_gripper_ros/msg/: GripperStatus.msg
epg50_gripper_ros/src/: epg50_gripper_node.cpp  scan_slave_id.cpp
epg50_gripper_ros/srv/: GripperCommand.srv  GripperStatus.srv  RenameGripper.srv
grab_detect/: CMakeLists.txt  README.md  package.xml  socket_client_demo.py
grab_detect/config/: grasp_detect.yaml
grab_detect/launch/: grasp_detect.launch.py
grab_detect/msg/: GraspResult.msg
grab_detect/src/: grasp_detect_node.cpp
grab_detect/srv/: GraspDetect.srv  GraspDetectTrigger.srv  GraspDetectTriggerMask.srv
robo_ctrl/: CMakeLists.txt  README.md  package.xml
robo_ctrl/include/libfairino/: robot.h
robo_ctrl/include/robo_ctrl/: high_level_ctrl.hpp  robo_ctrl_node.hpp
robo_ctrl/launch/: robo_ctrl_L.launch.py  robo_ctrl_R.launch.py
robo_ctrl/lib/: libfairino.so.2  libfairino.so.2.1.1
robo_ctrl/msg/: JointPosition.msg  RobotState.msg  TCPPose.msg
robo_ctrl/src/: circular_test.cpp  high_level.cpp  main.cpp  robo_ctrl_node.cpp  robot_move_cart_client.cpp  robot_move_client.cpp
robo_ctrl/srv/: RobotAct.srv  RobotActJ.srv  RobotMove.srv  RobotMoveCart.srv  RobotServo.srv  RobotServoJoint.srv  RobotServoLine.srv  RobotSetSpeed.srv
tf_node/: CMakeLists.txt  package.xml
tf_node/src/: fake_gripper_tf.py
tools/: CMakeLists.txt  README.md  README_dual_end_tf_collector.md  README_keyboard_ctrl.md  README_keyboard_tcp_controller_cpp.md  README_tf_query.md  package.xml
tools/config/: dual_end_tf_collector.yaml  static_transforms.yaml
tools/include/tools/: dual_end_tf_collector.hpp  eye_hand_calibration_data_collector.hpp  keyboard_tcp_controller.hpp  tf_point_query.hpp
tools/launch/: dual_end_tf_collector.launch.py  eye_hand_calibration_data_collector.launch.py  fake_gripper_tf_publisher.launch.py  keyboard_tcp_controller.launch.py  static_tf_multiple.launch.py  static_tf_publisher.launch.py  tf_point_query.launch.py
tools/scripts/: 4point.py  camera_matrix.json  dualarm.py  eye_in_hand_calibration.py  generate_aruco_marker.py  keyboard_ctrl.py  record_pose.py  record_pose_R.py  rotation.py  tf_query_client.py
tools/src/: dual_end_tf_collector.cpp  dual_end_tf_collector_node.cpp  eye_hand_calibration_data_collector.cpp  eye_hand_calibration_data_collector_node.cpp  fake_gripper_tf_publisher.cpp  keyboard_tcp_controller.cpp  keyboard_tcp_controller_node.cpp  laptop_camera_publisher.cpp  static_tf_publisher.cpp  tf_point_query.cpp  tf_point_query_node.cpp
tools/srv/: TransformPoint.srv
