<?xml version="1.0"?>
<package format="3">
  <name>dualarm</name>
  <version>0.0.1</version>
  <description>Dual-arm control package for Fairino</description>

  <maintainer email="phoenix@example.com">Phoenix</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>epg50_gripper_ros</depend>
  <depend>robo_ctrl</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>depth_handler</depend>
  <depend>detector</depend>
  <depend>grab_detect</depend>
  <depend>cv_bridge</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
